path issue resolved

--- a/config/config_cleaning.json
+++ b/config/config_cleaning.json
@@ -1,8 +1,8 @@
 {
     "file_paths" : {
-        "holidays_file":"../Data/misc/holidays.csv",
-        "traded_on_holidays_file":"../Data/misc/traded_on_holidays.csv",
-        "traded_on_weekends_file":"../Data/misc/traded_on_weekends.csv",
-        "missing_data_file":"../Data/misc/missing_data.csv"
+        "holidays_file":"Data/misc/holidays.csv",
+        "traded_on_holidays_file":"Data/misc/traded_on_holidays.csv",
+        "traded_on_weekends_file":"Data/misc/traded_on_weekends.csv",
+        "missing_data_file":"Data/misc/missing_data.csv"
     }
 }
