configure files to s3 in data_cleaning.py

--- a/config/config_cleaning.json
+++ b/config/config_cleaning.json
@@ -7,6 +7,7 @@
         "nifty_1day":"raw-data/nifty/nifty_1day.csv",
         "nifty_1min":"raw-data/nifty/nifty_1min.csv",
         "reliance_1day":"raw-data/reliance/reliance_1day.csv",
-        "reliance_5min":"raw-data/reliance/reliance_5min.csv"
+        "reliance_5min":"raw-data/reliance/reliance_5min.csv",
+        "missing_data_1min":"misc/missing_data_1min.csv"
     }
 }
