--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pandas>=1.5.1
 matplotlib==3.2.2
 numpy>=1.21.6
-nbformat==5.7.0
+nbformat>=5.7.0
 plotly==5.11.0
 DateTime
 TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
