--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,6 @@ https://github.com/matplotlib/mpl_finance/archive/master.zip
 mplfinance==0.12.9b5
 boto3==1.26.27
 flask==2.2.2
+statsmodels==0.13.5
+tensorflow==2.11.0
 # TA_Lib-0.4.24-cp310-cp310-win_amd64.whl
